added docs file
