# product-api/handlers/post.go
@@ -6,6 +6,11 @@ import (
 	"github.com/mnbao1975/microservices/product-api/data"
 )
 
+//	swagger:route POST /products products createProduct
+//	Add a product
+//	responses:
+//		200: noContentResponse
+
 // AddProduct will add a new product
 func (p *Products) AddProduct(rw http.ResponseWriter, r *http.Request) {
 	p.l.Println("POST a product")
