# product-api/swagger.yaml
@@ -1,7 +1,6 @@
-basePath: /v2
+basePath: /
 consumes:
 - application/json
-- application/xml
 definitions:
   GenericError:
     description: GenericError is a generic error message returned by a server
@@ -15,6 +14,8 @@ definitions:
     description: Product defines the structure for an API product
     properties:
       description:
+        description: the description for this poduct
+        maxLength: 10000
         type: string
         x-go-name: Description
       id:
@@ -24,23 +25,31 @@ definitions:
         type: integer
         x-go-name: ID
       name:
+        description: the name for this poduct
+        maxLength: 255
         type: string
         x-go-name: Name
       price:
+        description: the price for the product
         format: float
+        minimum: 0.01
         type: number
         x-go-name: Price
       sku:
+        description: the SKU for the product
+        pattern: '[a-z]+-[a-z]+-[a-z]+'
         type: string
         x-go-name: SKU
     required:
     - id
+    - name
+    - price
+    - sku
     type: object
     x-go-package: github.com/mnbao1975/microservices/product-api/data
-host: localhost
 info:
-  description: Documentation Product API.
-  title: Product API
+  description: Documentation for Product API
+  title: '...'
   version: 1.0.0
 paths:
   /products:
@@ -50,6 +59,21 @@ paths:
       responses:
         "200":
           $ref: '#/responses/productsResponse'
+      tags:
+      - products
+    post:
+      description: Add a product
+      operationId: createProduct
+      parameters:
+      - description: Product data structure to Update or Create.
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      responses:
+        "200":
+          $ref: '#/responses/noContentResponse'
       tags:
       - products
   /products/{id}:
@@ -71,14 +95,37 @@ paths:
           $ref: '#/responses/errorResponse'
       tags:
       - products
+    put:
+      description: Update a product
+      operationId: updateProduct
+      parameters:
+      - description: Product data structure to Update or Create.
+        in: body
+        name: Body
+        required: true
+        schema:
+          $ref: '#/definitions/Product'
+      - description: The id of product given on the URI path
+        format: int64
+        in: path
+        name: id
+        required: true
+        type: integer
+        x-go-name: ID
+      responses:
+        "200":
+          $ref: '#/responses/productResponse'
+      tags:
+      - products
 produces:
 - application/json
-- application/xml
 responses:
   errorResponse:
     description: An error returns in the response
     schema:
       $ref: '#/definitions/GenericError'
+  noContentResponse:
+    description: No content is returned by this API endpoint
   productResponse:
     description: A product returns in the response
     schema:
@@ -91,5 +138,4 @@ responses:
       type: array
 schemes:
 - http
-- https
 swagger: "2.0"
